Updated readme and build file.